--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_mod_summary">Megváltoztathat néhány általános konfigurációt egy-egy alklamazásban: DPI, Betűméret, Erőforrások felülbirálása, Nyelv, Teljes képernyő, Címsor rejtése, Bekapcsolva tartja a képernyőt, Tájolás, Kitartó és kis értesítések ; Engedélyek visszavonása &#8230;</string>
+    <string name="app_module_summary">Megváltoztathat néhány általános konfigurációt egy-egy alklamazásban: DPI, Betűméret, Erőforrások felülbirálása, Nyelv, Teljes képernyő, Címsor rejtése, Bekapcsolva tartja a képernyőt, Tájolás, Kitartó és kis értesítések ; Engedélyek visszavonása &#8230;</string>
 
 
     <!-- Main screen -->
