--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_mod_summary">Изменение настроек для каждого приложения:
+    <string name="app_module_summary">Изменение настроек для каждого приложения:
 DPI; Замена ресурсов; Язык; Полный экран;
 Удержание в памяти; Ориентация; Изменение прав; &#8230;</string>
 
