--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_mod_summary">Δυνατότητα να ρυθμιστούν γενικές ρυθμίσεις ανά εφαρμογή:
+    <string name="app_module_summary">Δυνατότητα να ρυθμιστούν γενικές ρυθμίσεις ανά εφαρμογή:
 DPI, Μέγεθος γραμματοσειράς, Αλλαγή φορτωμένων πώρων, Γλώσσα, Πλήρης οθόνη, Απόκρυψη τίτλου, Διατήρηση αναμμένης οθόνης, Εμφάνιση πάνω από την οθόνη κλειδώματος, Μόνιμο στην μνήμη, No fullscreen IME, Προσανατολισμός οθόνης, Επίμονες ειδοποιήσεις, Όχι μεγάλες ειδοποιήσεις, Άρνηση αδειών</string>
 
 
