--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_mod_summary">Možnosť nastaviť niekoľko základných nastavení pre jednotlivé aplikácie:
+    <string name="app_module_summary">Možnosť nastaviť niekoľko základných nastavení pre jednotlivé aplikácie:
 DPI, veľkosť písma, jazyk, načítať zdroje, zobraziť na celú obrazovku, bez názvu (skryť záhlavie), ponechať obrazovku zapnutú, zobraziť nad uzamykacou obrazovkou, ponechať v pamäti, žiadna celá obrazovka pre IME, orientácia, neústupné oznámenia, zrušiť povolenia</string>
 
 
