Updated turkish translation

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -22,7 +22,7 @@ Bellekte tutma; Yönlendirme; İzinleri iptal etme; &#8230;</string>
 \n- uygulama görünürken ekranı açık tutma
 \n- uygulamayı kilit ekranının üstünde gösterme
 \n- tam ekran klavye girişini devre dışı bırakma
-\n- LTR'yi zorlama
+\n- LTR\'yi zorlama
 \n- Tam ekranı otomatik gizleme
 \n- dikey/yatay/otomatik yönü zorlama
 \n- sesi (çoğu uygulama için) kapatma
