--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -4,7 +4,7 @@
 
 
     <!-- Main screen -->
-    <string name="app_loading">Alkalmazások betöltése, kérem várjon...</string>
+    <string name="app_loading">Alkalmazások betöltése, kérem várjon…</string>
     <string name="app_searchhint">Név vagy csomag</string>
     <string name="app_about">Ez egy <a href="http://forum.xda-developers.com/showthread.php?t=1574401">Xposed</a> mudul
  <a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> és <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a> től.
@@ -33,9 +33,9 @@
 
 
     <!-- main menu -->
-    <string name="menu_backup">Exportálás</string>
-    <string name="menu_restore">Importálás</string>
-    <string name="menu_about">Névjegy</string>
+    <string name="drawer_backup">Exportálás</string>
+    <string name="drawer_restore">Importálás</string>
+    <string name="drawer_about">Névjegy</string>
 
     <!-- Import / Export -->
     <string name="imp_exp_backup_completed">Beállítások exportálása fájlba</string>
@@ -68,8 +68,6 @@
     <string name="settings_nofullscreenime">Nincs teljes képernyős billentyűzet</string>
     <string name="settings_orientation">Tájolás</string>
     <string name="settings_insistentnotif">Folyamatos értesítések</string>
-    <string name="settings_nobignotif">Nem Nagy értesítések</string>
-    <string name="settings_notifpriority">Értesítések prioritása</string>
     <string name="settings_mute">Néma hang</string>
     <string name="settings_legacy_menu">Régi Menü gomb</string>
     <string name="settings_permissions">Engedélyek</string>
@@ -90,12 +88,6 @@
     <string name="settings_ori_portrait_reverse">Mindig álló (fordított)</string>
     <string name="settings_ori_landscape_reverse">Mindig fekvő (fordított)</string>
     <string name="settings_ori_forceauto_4way">Kényszeritett automatikus elforgatás</string>
-
-    <string name="settings_npri_max">Max</string>
-    <string name="settings_npri_high">Magas</string>
-    <string name="settings_npri_normal">Normál</string>
-    <string name="settings_npri_low">Alacsony</string>
-    <string name="settings_npri_min">Min</string>
 
     <!-- List resources -->
     <string name="res_title">Erőforrás</string>
