--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,7 +4,6 @@
 DPI; Замена ресурсов; Язык; Полный экран;
 Удержание в памяти; Ориентация; Изменение прав; &#8230;</string>
 
-
     <!-- Main screen -->
     <string name="app_loading">Загрузка приложений, подождите</string>
     <string name="app_searchhint">имя или пакет</string>
@@ -34,16 +33,11 @@ DPI; Замена ресурсов; Язык; Полный экран;
 \n- удаление приложения из недавних (требуется перезагрузка)
 \n- доступ к недавним задачам (требуется перезагрузка)
 \n- изменение прав (требуется двойная перезагрузка)
-\n- активация старой кнопки меню (не доступно на ОС 10.0+)
-\n- приоритет уведомлений (не доступно на ОС 8.0+)
-\n- отключение увеличенных уведомлений (не доступно на ОС 6.0+)</string>
+\n- активация старой кнопки меню</string>
     <string name="app_version">Версия: %s</string>
     <string name="app_translation">Перевод: %s</string>
     <string name="app_framework_warning_title">Модуль не включён!</string>
-    <string name="app_framework_warning_message">Убедитесь что EdXposed/LSPosed framework установлен и модуль включён в менеджере EdXposed/LSPosed после чего перезагрузите устройство.</string>
-    <string name="app_selinux_warning_message">Для работы модуля требуется permissive SELinux или EdXposed Framework минимальной версии <a href="https://github.com/ElderDrivers/EdXposed/releases">0.5.1.3</a>.
-        Любая версия <a href="https://github.com/LSPosed/LSPosed/releases">LSposed</a> так же подойдёт.</string>
-
+    <string name="app_framework_warning_message">Убедитесь что LSPosed framework установлен и модуль включён в менеджере LSPosed после чего перезагрузите устройство.</string>
 
     <!-- main menu -->
     <string name="menu_search">Поиск</string>
@@ -51,11 +45,11 @@ DPI; Замена ресурсов; Язык; Полный экран;
     <string name="menu_recents">Последние приложения</string>
 
     <!-- drawer -->
-    <string name="menu_backup">Резервное копирование</string>
-    <string name="menu_restore">Восстановление</string>
-    <string name="menu_filter">Фильтр</string>
-    <string name="menu_permission">Фильтр по разрешению</string>
-    <string name="menu_about">О программе</string>
+    <string name="drawer_backup">Резервное копирование</string>
+    <string name="drawer_restore">Восстановление</string>
+    <string name="drawer_filter">Фильтр</string>
+    <string name="drawer_permission">Фильтр по разрешению</string>
+    <string name="drawer_about">О программе</string>
 
     <!-- Import / Export -->
     <string name="imp_exp_backup_completed">Резервное копирование выполнено успешно</string>
@@ -72,7 +66,6 @@ DPI; Замена ресурсов; Язык; Полный экран;
     <string name="menu_reboot">Перезагрузка</string>
     <string name="menu_reboot_confirm">Подтверждение</string>
     <string name="menu_reboot_confirm_desc">Устройство будет перезагружено. Продолжить?</string>
-
 
     <!-- Settings screen -->
     <string name="settings_title">Настройки</string>
@@ -93,9 +86,7 @@ DPI; Замена ресурсов; Язык; Полный экран;
     <string name="settings_nofullscreenime">Нет клав. в полном экране</string>
     <string name="settings_orientation">Ориентация</string>
     <string name="settings_insistentnotif">Настойчивые уведомления</string>
-    <string name="settings_nobignotif">Нет больших уведомлений</string>
     <string name="settings_ongoingnotif">Постоянные уведомления</string>
-    <string name="settings_notifpriority">Приоритет уведомлений</string>
     <string name="settings_mute">Без звука</string>
     <string name="settings_legacy_menu">Старая кнопка меню</string>
     <string name="settings_recent_tasks">Доступ к недавним задачам</string>
@@ -122,12 +113,6 @@ DPI; Замена ресурсов; Язык; Полный экран;
     <string name="settings_ori_landscape_user">Всегда ландшафт (пользовательская)</string>
     <string name="settings_ori_user_4way">Всегда вращаться (пользовательская)</string>
 
-    <string name="settings_npri_max">Max</string>
-    <string name="settings_npri_high">High</string>
-    <string name="settings_npri_normal">Normal</string>
-    <string name="settings_npri_low">Low</string>
-    <string name="settings_npri_min">Min</string>
-
     <!-- Recent apps -->
     <string name="recents_title">Последние приложения</string>
 
@@ -150,12 +135,6 @@ DPI; Замена ресурсов; Язык; Полный экран;
 Вы действительно хотите отменить их?</string>
     <string name="settings_apply_title">Применить</string>
     <string name="settings_apply_detail">Так же, убить приложение, чтобы оно подхватило новые настройки?</string>
-
-    <!-- Theme -->
-    <string name="theme_title">Тема</string>
-    <string name="theme_light">Светлая</string>
-    <string name="theme_dark">Тёмная</string>
-    <string name="theme_auto">Системная</string>
 
     <!-- Filter dialog -->
     <string name="filter_title">Фильтр</string>
